src/test/ui/specialization/defaultimpl/specialization-wfcheck.stderr
error[E0277]: the trait bound `U: std::cmp::Eq` is not satisfied
  --> $DIR/specialization-wfcheck.rs:7:17
   |
LL | trait Foo<'a, T: Eq + 'a> { }
   |                  -- required by this bound in `Foo`
LL | 
LL | default impl<U> Foo<'static, U> for () {}
   |                 ^^^^^^^^^^^^^^^ the trait `std::cmp::Eq` is not implemented for `U`
   |
help: consider restricting type parameter `U`
   |
LL | default impl<U: std::cmp::Eq> Foo<'static, U> for () {}
   |               ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
